Repo Cleanup and continue work on okOpen

--- a/okCycle/example.html
+++ b/okCycle/example.html
@@ -31,13 +31,13 @@
       <section class='eight'>
         <h3>Fading</h3>
         <ul id='example_one' class='slideshow'>
-          <li title='caption for one'><img src='images/one.png' alt='' /></li>
-          <li title='caption for two'><img src='images/two.png' alt='' /></li>
-          <li><img src='images/three.png' alt='' /></li>
-          <li title='caption for four'><img src='images/four.png' alt='' /></li>
-          <li><img src='images/five.png' alt='' /></li>
-          <li title='caption for six'><img src='images/six.png' alt='' /></li>
-          <li title=''><img src='images/seven.png' alt='' /></li>
+          <li title='caption for one'><img src='../shared/images/one.png' alt='' /></li>
+          <li title='caption for two'><img src='../shared/images/two.png' alt='' /></li>
+          <li><img src='../shared/images/three.png' alt='' /></li>
+          <li title='caption for four'><img src='../shared/images/four.png' alt='' /></li>
+          <li><img src='../shared/images/five.png' alt='' /></li>
+          <li title='caption for six'><img src='../shared/images/six.png' alt='' /></li>
+          <li title=''><img src='../shared/images/seven.png' alt='' /></li>
         </ul>
         <pre>
           <code>
@@ -56,13 +56,13 @@ $("#example_one").okCycle({
         <h3>Scrolling</h3>
         <div class='eight alpha'>
           <ul id='example_two' class='slideshow'>
-            <li title='#html-caption-1'><img src='images/one.png' alt='' /></li>
-            <li title='#html-caption-2'><img src='images/two.png' alt='' /></li>
-            <li title='#html-caption-3'><img src='images/three.png' alt='' /></li>
-            <li title='#html-caption-4'><img src='images/four.png' alt='' /></li>
-            <li title='#html-caption-5'><img src='images/five.png' alt='' /></li>
-            <li title='#html-caption-6'><img src='images/six.png' alt='' /></li>
-            <li title='#html-caption-7'><img src='images/seven.png' alt='' /></li>
+            <li title='#html-caption-1'><img src='../shared/images/one.png' alt='' /></li>
+            <li title='#html-caption-2'><img src='../shared/images/two.png' alt='' /></li>
+            <li title='#html-caption-3'><img src='../shared/images/three.png' alt='' /></li>
+            <li title='#html-caption-4'><img src='../shared/images/four.png' alt='' /></li>
+            <li title='#html-caption-5'><img src='../shared/images/five.png' alt='' /></li>
+            <li title='#html-caption-6'><img src='../shared/images/six.png' alt='' /></li>
+            <li title='#html-caption-7'><img src='../shared/images/seven.png' alt='' /></li>
           </ul>
           <pre>
             <code>
@@ -92,13 +92,13 @@ $("#example_two").okCycle({
       <section class='eight'>
         <h3>Sliding</h3>
         <ul id='example_three' class='slideshow'>
-          <li title='one'><img src='images/one.png' alt='' /></li>
-          <li title='two'><img src='images/two.png' alt='' /></li>
-          <li title='three'><img src='images/three.png' alt='' /></li>
-          <li title='four'><img src='images/four.png' alt='' /></li>
-          <li title='five'><img src='images/five.png' alt='' /></li>
-          <li title='six'><img src='images/six.png' alt='' /></li>
-          <li title='seven'><img src='images/seven.png' alt='' /></li>
+          <li title='one'><img src='../shared/images/one.png' alt='' /></li>
+          <li title='two'><img src='../shared/images/two.png' alt='' /></li>
+          <li title='three'><img src='../shared/images/three.png' alt='' /></li>
+          <li title='four'><img src='../shared/images/four.png' alt='' /></li>
+          <li title='five'><img src='../shared/images/five.png' alt='' /></li>
+          <li title='six'><img src='../shared/images/six.png' alt='' /></li>
+          <li title='seven'><img src='../shared/images/seven.png' alt='' /></li>
         </ul>
         <pre>
           <code>
