--- a/okOpen/example.html
+++ b/okOpen/example.html
@@ -34,75 +34,85 @@
         <h3>Tooltips</h3>
         <a id='example-1' href='#' data-content="I'm a tooltip">Hover Me</a>
         <script>
-          var tooltip = $.okOpen({effect:'togglePuff'}).addClass('tooltip');
+          var tooltip = $.okOpen({inEffect:'togglePuff', outEffect: 'togglePuff', where:[$("#example-1"),0,-35]}).addClass('tooltip');
 
           $("#example-1").on('mouseenter mouseleave',function(e){
-            e.type == 'mouseenter' ? tooltip.open($(this).data('content'),{where:[this,0,-35]}) : tooltip.close();
+            e.type == 'mouseenter' ? tooltip.open($(this).data('content')) : tooltip.close();
           });
         </script>
         <pre>
           <code>
-$("#example-1").on('mouseenter mouseleave',function(e){
-  var tooltip = $.okOpen({effect:'togglePuff'});
-
-  $("#example-1").on('mouseenter mouseleave',function(e){
-    e.type == 'mouseenter' ? tooltip.open($(this).data('content'),{where:[this,0,-35]}) : tooltip.close();
-  });
-});</code>
+          </code>
         </pre>
 
         <h3>Modal Windows</h3>
         <a id='example-2' href='#' data-content="I'm a modal window!">Click Me</a>
         <script>
-          var modal = $.okOpen({ effect:'fadeIn', modal: true}).addClass('modal');
+          var modal = $.okOpen({ inEffect:'fadeIn', outEffect: 'fadeOut', modal: true, where: 'center' }).addClass('modal');
 
           $("#example-2").on('click',function(e){
             e.preventDefault();
-            modal.open($(this).data('content'),{ where: 'center' });
+            modal.open($(this).data('content'));
           });
 
-          $('.'+modal.options.overlayClass).click(function(e){ modal.close(); });
+          modal.overlay.click(function(e){ modal.close(); });
         </script>
         <pre>
           <code>
-var modal = $.okOpen({ effect:'fadeIn', modal: true}).addClass('modal');
-
-$("#example-2").on('click',function(e){
-  e.preventDefault();
-  modal.open($(this).data('content'),{ where: 'center' });
-});
-
-$('.'+modal.options.overlayClass).click(function(e){ modal.close(); });</code>
+          </code>
         </pre>
         <h3>Notifications</h3>
         <a id='example-3' href='#' data-content="I'm a notification!">Add a regular notification</a>
-        <!-- <a id='example-4' href='#' data-content="I'm a notification!">Add a sticky notification</a> -->
         <script>
 
           $("#example-3").on('click',function(e){
             e.preventDefault();
-            $.okOpen({ 
-              effect:'fadeIn',  
-              where: 'none', 
-              parent: "#notification-queue", 
-              destroyAfter: 2000 
+            var notification = $.okOpen({ 
+              inEffect:'fadeIn',  
+              outEffect:'fadeIn',  
+              where: { position:'relative' }, 
+              parent: "#notification-queue"
             })
             .addClass('notification')
             .open($(this).data('content'));
-          });
 
+            setTimeout(function() {
+              notification.fadeOut(function(){
+                notification.remove();
+              });
+            }, 3000);
+
+          });
         </script>
         <pre>
           <code>
-var modal = $.okOpen({ effect:'fadeIn', modal: true}).addClass('modal');
-
-$("#example-2").on('click',function(e){
-  e.preventDefault();
-  modal.open($(this).data('content'),{ where: 'center' });
-});
-
-$('.'+modal.options.overlayClass).click(function(e){ modal.close(); });</code>
+          </code>
         </pre>
+
+        <h3>Images</h3>
+        <a id='example-4' href='../shared/images/one.png' ><img src='../shared/images/thumbs/one.png' alt='' /></a>
+        <script>
+
+          $("#example-4").on('click',function(e){
+            e.preventDefault();
+
+            var self = $(this),
+                pos  = self.offset(),
+                effectOpts = { top: pos.top, left: pos.left, width: self.width(), height:self.height() };
+
+            var notification = $.okOpen({ 
+              inEffect : 'zoomIn',  
+              outEffect : 'zoomOut',  
+              where  : {},
+              modal  : true
+            })
+            .addClass('image')
+            .open("<img src='"+self.attr('href')+"' alt=''/>", effectOpts);
+
+            notification.overlay.click(function(e){ notification.close(effectOpts); });
+          });
+        </script>
+
       </section>
     </article>
 
