[okPopup] Rename okOpen to okPopup

--- a/okPopup/example.html
+++ b/okPopup/example.html
@@ -6,25 +6,25 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>okOpen</title>
-  <meta name="description" content="okOpen - jquery content display plugin">
+  <title>okPopup</title>
+  <meta name="description" content="okPopup - jquery content display plugin">
   <meta name="author" content="okbreathe">
   <link href="screen.css" rel="stylesheet" type="text/css" media="screen">
-  <link href="okOpen.css" rel="stylesheet" type="text/css" media="screen">
+  <link href="okPopup.css" rel="stylesheet" type="text/css" media="screen">
   <!--[if lt IE 9]>
     <script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->  
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="jquery.basicPosition.js"></script>
-  <script src="jquery.okOpen.core.js"></script>
-  <script src="jquery.okOpen.effects.js"></script>
+  <script src="jquery.okPopup.core.js"></script>
+  <script src="jquery.okPopup.effects.js"></script>
 </head>
 <body>
 
   <div id="doc">
     <header>
-      <h1>okOpen</h1>
+      <h1>okPopup</h1>
     </header>
 
     <div id='notification-queue'></div>
