--- a/okPopup/example.html
+++ b/okPopup/example.html
@@ -31,18 +31,21 @@
       <section class='twelve'>
         <h3>Tooltips</h3>
         <p>
-          <a class='tip' href='#' data-content="Tooltip One">Hover Me</a>
-          <br/>
-          <br/>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+          <a class='tip' href='#' data-content="Hello World!">Hover Me</a>
+          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
           <a class='tip' href='#' data-content="Tooltip Two">Hover Me</a>
-          <br/>
-          <br/>
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum 
           <a class='tip' href='#' data-content="Tooltip Three">Hover Me</a>
         </p>
         <script>
           $(".tip").okPopup({
-            show        : 'mouseenter',
-            hide        : 'mouseleave',
+            openEvent        : 'mouseenter',
+            closeEvent        : 'mouseleave',
             openEffect  : 'fadeIn',
             closeEffect : 'fadeOut' ,
             where       : 'elementTop',
@@ -55,12 +58,12 @@
           <pre>
             <code>
 $(".tip").okPopup({
-  show        : 'mouseenter',
-  hide        : 'mouseleave',
+  openEvent   : 'mouseenter',
+  closeEvent  : 'mouseleave',
   openEffect  : 'fadeIn',
   closeEffect : 'fadeOut' ,
   where       : 'elementTop',
-  onOpen     : function(e,popup){ 
+  onOpen      : function(e,popup){ 
     popup.html($(e.currentTarget).data('content')); 
     popup.open(e); 
   }
@@ -74,7 +77,7 @@ $(".tip").okPopup({
         <script>
 
           $("#example-2").okPopup({
-            show        : 'click',
+            openEvent        : 'click',
             where       : 'center',
             openEffect  : 'fadeIn',
             closeEffect : 'fadeOut',
@@ -89,12 +92,12 @@ $(".tip").okPopup({
           <pre>
             <code>
 $("#example-2").okPopup({
-  show        : 'click',
+  openEvent   : 'click',
   where       : 'center',
   openEffect  : 'fadeIn',
   closeEffect : 'fadeOut',
   modal       : 'click',
-  onOpen     : function(e, popup){ 
+  onOpen      : function(e, popup){ 
     popup.html($(e.currentTarget).data('content')); 
     popup.open(e); 
   }
@@ -114,7 +117,7 @@ $("#example-2").okPopup({
               parent      : "#notification-queue" // Set the parent to a specific element
             })
             .addClass('notification')
-            .open(e, $(e.currentTarget).data('content')); // If given a string it will just set the innerHTML to the value. If given a function, it will be called with the event and popup
+            .open(e, $(e.currentTarget).data('content')); 
 
             setTimeout(function() {
               notification.fadeOut(function(){
@@ -129,11 +132,11 @@ $("#example-2").okPopup({
 $("#example-3").on('click',function(e){
   e.preventDefault();
   var notification = $.okPopup.create($(this),{ 
-    openEffect  : 'fadeIn',
-    parent      : "#notification-queue" // Set the parent to a specific element
+    openEffect : 'fadeIn',
+    parent     : "#notification-queue" // Set the parent to a specific element
   })
   .addClass('notification')
-  .open(e, $(e.currentTarget).data('content')); // If given a string it will just set the innerHTML to the value. If given a function, it will be called with the event and popup
+  .open(e, $(e.currentTarget).data('content')); 
 
   setTimeout(function() {
     notification.fadeOut(function(){
@@ -150,22 +153,27 @@ $("#example-3").on('click',function(e){
           var self = $("#example-4");
 
           self.okPopup({
-            show      : 'click',
+            openEvent      : 'click',
             modal     : 'click',
             onOpen    : function(e,popup) {
 
               popup.html("<img src='"+ $(e.currentTarget).attr('href')+"' alt=''/>");
 
               function open(){
-                var initialCss = { height: self.height(), width: self.width(), top: self.offset().top, left: self.offset().left, position: 'absolute' },
-                    finalCss = $.positionAt(popup, e.currentTarget, 'magnify');
+                  var initialCss = { 
+                    height: self.height(), 
+                    width: self.width(), 
+                    top: self.offset().top, 
+                    left: self.offset().left, 
+                    position: 'absolute' 
+                  },
+                  finalCss = $.positionAt(popup, e.currentTarget, 'magnify');
 
-                popup.open(e); // Show the modal and popup
+                popup.open(e); // openEvent the overlay and popup
 
                 // Do our custom animation
                 popup.css(initialCss).find('img').css({ width: '100%' });
-
-                return popup.animate(finalCss, 300, 'swing');
+                popup.animate(finalCss, 300, 'swing');
               }
 
               popup
@@ -196,22 +204,27 @@ $("#example-3").on('click',function(e){
 var self = $("#example-4");
 
 self.okPopup({
-  show      : 'click',
+  openEvent : 'click',
   modal     : 'click',
   onOpen    : function(e,popup) {
 
     popup.html("&lt;img src='"+ $(e.currentTarget).attr('href')+"' alt=''/&gt;");
 
     function open(){
-      var initialCss = { height: self.height(), width: self.width(), top: self.offset().top, left: self.offset().left, position: 'absolute' },
-          finalCss = $.positionAt(popup, e.currentTarget, 'magnify');
+      var initialCss = { 
+        height: self.height(), 
+        width: self.width(), 
+        top: self.offset().top, 
+        left: self.offset().left, 
+        position: 'absolute' 
+      },
+      finalCss = $.positionAt(popup, e.currentTarget, 'magnify');
 
-      popup.open(e); // Show the modal and popup
+      popup.open(e); // Show the overlay and popup
 
       // Do our custom animation
       popup.css(initialCss).find('img').css({ width: '100%' });
-
-      return popup.animate(finalCss, 300, 'swing');
+      popup.animate(finalCss, 300, 'swing');
     }
 
     popup
@@ -227,11 +240,11 @@ self.okPopup({
     return popup.animate({
       top     : self.offset().top,
       left    : self.offset().left,
-      opacity : "hide",
+      opacity : "closeEvent",
       width   : 1,
       height  : 1
     }, 200, 'swing', function(){
-      $(this).css({width:'',height:''}).hide();
+      $(this).css({width:'',height:''}).closeEvent();
       popup.close();
     });
   }
