--- a/okPopup/example.html
+++ b/okPopup/example.html
@@ -29,6 +29,7 @@
 
     <article id="main" class='container'>
       <section class='twelve'>
+        <p class='box'>For all your popup needs</p>
         <h3>Tooltips</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -147,8 +148,11 @@ $("#example-3").on('click',function(e){
 });</code>
           </pre>
 
-        <h3>Images</h3>
+        <h3>Image Zoom</h3>
         <a id='example-4' href='../shared/images/giant.png' ><img src='../shared/images/thumbs/giant.png' alt='' /></a>
+        <p>
+          This image is actually 2000x2000, the 'center' location fits content within the screen.
+        </p>
         <script>
           var self = $("#example-4");
 
