--- a/okPopup/example.html
+++ b/okPopup/example.html
@@ -154,14 +154,14 @@ $("#example-3").on('click',function(e){
         <h3>Image Zoom</h3>
         <a id='example-4' href='../shared/images/giant.png' ><img src='../shared/images/thumbs/giant.png' alt='' /></a>
         <p>
-          This image is actually 2000x2000, the 'center' location fits content within the screen.
+          At the moment, okPopup comes with one prefab component for displaying images.
         </p>
         <script>
           $("#example-4").okPopup({ ui: 'imageZoom' });
         </script>
           <pre>
             <code>
-$("#example-4").okPopup({ ui: 'imageZoom' }); // Prefab UI component</code>
+$("#example-4").okPopup({ ui: 'imageZoom' });</code>
           </pre>
       </section>
     </article>
