Use imagesloaded.js rather than custom solution for image loading

--- a/okCycle/example.html
+++ b/okCycle/example.html
@@ -120,6 +120,7 @@ $("#example_three").okCycle({
   </div> <!-- #doc -->
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="jquery.imagesloaded.js"></script>
   <script src="jquery.okCycle.core.js"></script>
   <script src="jquery.okCycle.transitions.js"></script>
   <script src="jquery.okCycle.ui.js"></script>
