--- a/okCycle/example.html
+++ b/okCycle/example.html
@@ -31,13 +31,13 @@
       <section class='eight'>
         <h3>Fading</h3>
         <ul id='example_one' class='slideshow'>
-          <li title='caption for one'><img src='../shared/images/one.png' alt='' /></li>
-          <li title='caption for two'><img src='../shared/images/two.png' alt='' /></li>
-          <li><img src='../shared/images/three.png' alt='' /></li>
-          <li title='caption for four'><img src='../shared/images/four.png' alt='' /></li>
-          <li><img src='../shared/images/five.png' alt='' /></li>
-          <li title='caption for six'><img src='../shared/images/six.png' alt='' /></li>
-          <li title=''><img src='../shared/images/seven.png' alt='' /></li>
+          <li data-caption='caption for one'><img src='images/one.png' alt='' /></li>
+          <li data-caption='caption for two'><img src='images/two.png' alt='' /></li>
+          <li><img src='images/three.png' alt='' /></li>
+          <li data-caption='caption for four'><img src='images/four.png' alt='' /></li>
+          <li><img src='images/five.png' alt='' /></li>
+          <li data-caption='caption for six'><img src='images/six.png' alt='' /></li>
+          <li data-caption=''><img src='images/seven.png' alt='' /></li>
         </ul>
         <p>
           Stop the autoplay by hovering the slideshow
@@ -62,13 +62,13 @@ $("#example_one").okCycle({
         <h3>Scrolling</h3>
         <div class='eight alpha'>
           <ul id='example_two' class='slideshow'>
-            <li title='#html-caption-1'><img src='../shared/images/one.png' alt='' /></li>
-            <li title='#html-caption-2'><img src='../shared/images/two.png' alt='' /></li>
-            <li title='#html-caption-3'><img src='../shared/images/three.png' alt='' /></li>
-            <li title='#html-caption-4'><img src='../shared/images/four.png' alt='' /></li>
-            <li title='#html-caption-5'><img src='../shared/images/five.png' alt='' /></li>
-            <li title='#html-caption-6'><img src='../shared/images/six.png' alt='' /></li>
-            <li title='#html-caption-7'><img src='../shared/images/seven.png' alt='' /></li>
+            <li data-caption='#html-caption-1'><img src='images/one.png' alt='' /></li>
+            <li data-caption='#html-caption-2'><img src='images/two.png' alt='' /></li>
+            <li data-caption='#html-caption-3'><img src='images/three.png' alt='' /></li>
+            <li data-caption='#html-caption-4'><img src='images/four.png' alt='' /></li>
+            <li data-caption='#html-caption-5'><img src='images/five.png' alt='' /></li>
+            <li data-caption='#html-caption-6'><img src='images/six.png' alt='' /></li>
+            <li data-caption='#html-caption-7'><img src='images/seven.png' alt='' /></li>
           </ul>
           <p>Try using your mousewheel</p>
           <pre>
@@ -81,10 +81,10 @@ $("#example_two").okCycle({
         </div>
         <div class='four omega'>
           <p class='box'>
-            The normal behavior is to use the elements title attribute to
-            provide captions. However, If you give your slide a title prefixed
-            with an octothorpe, it will use the innerHTML from an element with
-            an id of the same value.
+            The normal behavior is to use the elements data-caption attribute
+            to provide captions. However, if the data-caption is prefixed with
+            an octothorpe (#), it will be treated as a selector and the
+            innerHTML for the corresponding element will be used.
           </p>
           <div id='html-caption-1'>HTML Caption for Slide One <a href='#'>Link to Nowhere</a></div>
           <div id='html-caption-2'>HTML Caption for Slide Two </div>
@@ -99,13 +99,13 @@ $("#example_two").okCycle({
       <section class='eight'>
         <h3>Sliding</h3>
         <ul id='example_three' class='slideshow'>
-          <li title='one'><img src='../shared/images/one.png' alt='' /></li>
-          <li title='two'><img src='../shared/images/two.png' alt='' /></li>
-          <li title='three'><img src='../shared/images/three.png' alt='' /></li>
-          <li title='four'><img src='../shared/images/four.png' alt='' /></li>
-          <li title='five'><img src='../shared/images/five.png' alt='' /></li>
-          <li title='six'><img src='../shared/images/six.png' alt='' /></li>
-          <li title='seven'><img src='../shared/images/seven.png' alt='' /></li>
+          <li data-caption='one'><img src='images/one.png' alt='' /></li>
+          <li data-caption='two'><img src='images/two.png' alt='' /></li>
+          <li data-caption='three'><img src='images/three.png' alt='' /></li>
+          <li data-caption='four'><img src='images/four.png' alt='' /></li>
+          <li data-caption='five'><img src='images/five.png' alt='' /></li>
+          <li data-caption='six'><img src='images/six.png' alt='' /></li>
+          <li data-caption='seven'><img src='images/seven.png' alt='' /></li>
         </ul>
         <p>
           Image loading is deferred until scrolled to (You might have troubling seeing this if you're viewing this locally)
