--- a/basicLiveSearch/example.html
+++ b/basicLiveSearch/example.html
@@ -19,7 +19,7 @@
 
   <div id="doc">
     <header>
-      <h1>jQuery.basicWindow</h1>
+      <h1>jQuery.basicLiveSearch</h1>
     </header>
 
     <article id="main" class='container'>
