[okCycle] Use deferreds, improve slideshow ui plugin

--- a/okPopup/example.html
+++ b/okPopup/example.html
@@ -176,10 +176,10 @@ $("#example-4").okPopup({ imageZoom: true });</code>
         </p>
         <ul id='example-5'>
           <li><a href='../shared/images/one.png'><img src='../shared/images/thumbs/one.png' alt='' /></a></li>
-          <li><a href='../shared/images/two.png'><img src='../shared/images/thumbs/two.png' alt='' /></a></li>
+          <li><a href='../shared/images/giant.png'><img src='../shared/images/thumbs/giant.png' alt='' /></a></li>
           <li><a href='../shared/images/three.png'><img src='../shared/images/thumbs/three.png' alt='' /></a></li>
           <li><a href='../shared/images/four.png'><img src='../shared/images/thumbs/four.png' alt='' /></a></li>
-          <li><a href='../shared/images/five.png'><img src='../shared/images/thumbs/five.png' alt='' /></a></li>
+          <li><a href='../shared/images/huge.png'><img src='../shared/images/thumbs/huge.png' alt='' /></a></li>
           <li><a href='../shared/images/six.png'><img src='../shared/images/thumbs/six.png' alt='' /></a></li>
           <li><a href='../shared/images/seven.png'><img src='../shared/images/thumbs/seven.png' alt='' /></a></li>
         </ul>
